# inklayers

./: .gitignore  AUTHORS  README.md  TestSuite.py  bug2-closer.json  export-command.sh  fishes.ini  fishes.json  fishes2.json  fishes2.toml  inklayers.inx  inklayers.py  inklayersExt.py  opamp.json  requirements.txt  setup.cfg  setup.py  svg-objects-export.py  tbs-star.json
examples/: fishes.json  fishes.toml  fishes2.ini  names_test.ini  tbs-star.json
inklayers/: __init__.py  inklayers.py
