[metadata]
name = inklayers
author = Tullio Facchinetti
author_email = toolleeo@gmail.com
summary = Export SVG layers to create slideshows and presentations
url = https://github.com/toolleeo/inklayers
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = inklayers
install_requires =
	configparser
	inkex
	lxml
	pytoml
	semantic-version

include_package_data = True

[options.entry_points]
console_scripts =
	inklayers = inklayers:main
